--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,13 @@
 \include{kap1}
 \include{kap2}
 \include{kap3}
+\include{kap4}
+\include{kap5}
+\include{kap6}
+\include{kap7}
+\include{kap8}
+
+
 %und so weiter
 
 
