--- a/main.tex
+++ b/main.tex
@@ -53,16 +53,17 @@
 \include{title}
 \tableofcontents
 
-\include{kap1}
-\include{kap2}
-\include{kap3}
-\include{kap4}
-\include{kap5}
-\include{kap6}
-\include{kap7}
-\include{kap8}
-\include{kap9}
-\include{kap10}
+\include{kap1/kap1}
+\include{kap2/kap2}
+\include{kap3/kap3}
+\include{kap4/kap4}
+\include{kap5/kap5}
+\include{kap6/kap6}
+\include{kap7/kap7}
+\include{kap8/kap8}
+\include{kap8/kap8}
+\include{kap9/kap9}
+\include{kap10/kap10}
 %und so weiter
 
 
