--- a/main.tex
+++ b/main.tex
@@ -31,9 +31,9 @@
 \newenvironment{Bws}
 {\par\noindent\normalfont\par\nopagebreak%
   \begin{mdframed}[
-     linewidth=2pt,
+     linewidth=3pt,
      linecolor=pink,
-     bottomline=false,topline=false,rightline=false,
+     bottomline=false,topline=true,rightline=false,
      innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
      innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
      skipabove=.5\baselineskip
