--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
   \begin{mdframed}[
      linewidth=3pt,
      linecolor=pink,
-     bottomline=false,topline=true,rightline=false,
+     bottomline=false,topline=false,rightline=false,
      innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
      innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
      skipabove=.5\baselineskip
