--- a/kap6/kap6.tex
+++ b/kap6/kap6.tex
@@ -25,12 +25,12 @@ Bezeichnungen\\
 \end{Bemerkung}
 
 \begin{enumerate}
-\item Der Ausdruck $\sqrt{-1}$ heißt \textbf{imagin"are Einheit} und wird hier mit $i$ bezeichnet.
+\item Der Ausdruck $\sqrt{-1}$ heißt \textbf{imaginäre Einheit} und wird hier mit $i$ bezeichnet.
 \item Ausdr"ucke der Form $i\cdot y$ mit $y \in \R$  heißen \textbf{imagin"are Zahlen}
 \item Ausdr"ucke der Form $z =x+i*y$ mit $x,y \in \R$ werden als \textbf{Komplexe Zahlen} bezeichnet
 \item Ist $z =x+i*y$ eine Komplexe Zahl, so heißen\\
 \indent $x=Re(z)$ \textbf{Realteil} von $z$\\
-\indent $y=Im(z)$ \textbf{Imagin"arteil} von $z$
+\indent $y=Im(z)$ \textbf{Imaginärteil} von $z$
 \item Die Menge $\C =\{ {z = x+j y| x, y \in \R}\}$ wird als Menge der Komplexen Zahlen bezeichnet\\
 \end{enumerate}
 
@@ -38,7 +38,7 @@ Bezeichnungen\\
 Aber\\
 \end{Bemerkung}
 
-Der  \textbf{Imagin"arteil} $y$ einer komplexen Zahl  $z =x+i*y$ ist selbst eine reelle Zahl! Der \textbf{Imagin"arteil} ist lediglich der Faktor bei $i$!\\
+Der  \textbf{Imaginärteil} $y$ einer komplexen Zahl  $z =x+i*y$ ist selbst eine reelle Zahl! Der \textbf{Imaginärteil} ist lediglich der Faktor bei $i$!\\
 
 	\section{Darstellung komplexer Zahlen}
 
