Erster Mac-upload (bilder eingefügt)

--- a/kap6/kap6.tex
+++ b/kap6/kap6.tex
@@ -48,7 +48,7 @@ Eine komplexe Zahl wird durch zwei reelle Zahlen charakterisiert. Wie bei zweidi
 
 Jeder komplexen Zahl $z =x+i*y$ entspricht genau ein Punkt $P =(x,y)$ in der komplexen Zahlenebene und umgekehrt.\\
 
-\includegraphics[width=3in]{komplexezahlen1}
+\includegraphics[width=3in]{kap6/komplexezahlen1}
 
 \begin{Bemerkung}
 Bezeichnungen\\
@@ -66,7 +66,7 @@ Beispiel\\
 Die folgenden komplexen Zahlen sind in der Gaußschen Zahlenebene darzustellen: \\
 $z_{1} = 2+3*j$  $z_{2} =-3-j$ ($i$ wird hier $j$ genannt)
 
-\includegraphics[width=3in]{komplexezahlen2}
+\includegraphics[width=3in]{kap6/komplexezahlen2}
 
 \begin{Bemerkung}
 Bemerkungen\\
@@ -80,7 +80,7 @@ x\\
 y\\
 \end{pmatrix}$
 
-\includegraphics[width=3in]{komplexezahlen3}
+\includegraphics[width=3in]{kap6/komplexezahlen3}
 
 In diesem Fall spricht man von z als einem \textbf{komplexen Zeiger}.\\
 
@@ -88,7 +88,7 @@ In diesem Fall spricht man von z als einem \textbf{komplexen Zeiger}.\\
 
 Neben der eben eingef"uhrten kartesischen Darstellung $z =x+j*y$ kann eine komplexe Zahl auch entsprechend der hier stehenden Skizze dich ihren Radius  und den Winkel  eindeutig festgelegt werden.
 
-\includegraphics[width=3in]{komplexezahlen4}
+\includegraphics[width=3in]{kap6/komplexezahlen4}
 
 \begin{Bemerkung}
 Erinnerung\\
