--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -119,5 +119,5 @@ Hier ist die Kurvenschar der Funktion\\ $f(x)=ax^3$. Sie verlaufen alle durch da
 \end{minipage}
 \hfill
 \begin{minipage}[b]{0.4\linewidth}
-\includegraphics[height=12\baselineskip]{BundelFunktionenscharen.eps}
+\includegraphics[height=12\baselineskip]{kap3/BundelFunktionenscharen.eps}
 \end{minipage}
