--- a/kap7/kap7.tex
+++ b/kap7/kap7.tex
@@ -3,4 +3,4 @@ dsfdfs\\
 
 
 	\section{Hypothesentests}
-Nur ein Test zur GH Kompabilität auf OSX Ger"aten\\
+Nur ein Test zur GH Kompabilität auf OSX Ger"aten\\?a
