--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -3,6 +3,7 @@
 	\section{Lineare Gleichungssysteme und GauÃŸ-Algorythmus}
 
 Lineare Gleichungssysteme lassen sich aufwendig mit Einsetzungsverfahren oder Additionsverfahren l"osen, Carl Friedrich GauÃŸ hat ein ''Algorythmus'' erfunden, mit dem sich ohne Taschenrechner leicht und relativ schnell l"osen l"asst.\\
+Diese lassen sich aufwendig mit Einsetzungsverfahren oder Additionsverfahren l"osen, Carl Friedrich Gauß hat ein ''Algorythmus'' erfunden, mit dem sich ohne Taschenrechner leicht und relativ schnell l"osen l"asst.\\
 Am Besten wird dieser mit einem Beispiel Erl"autert:\\
 \\
 $\Rightarrow$ $\left\{ \begin{array}{rccl}
@@ -49,3 +50,30 @@ x+0y+0z&=&1\\
 $\mathbb{L}=\{(1|2|3) \}$ Die LÃ¶sungsmenge wird als n-Tupel alphabetisch sortiert.
 
 	\section{LGS mit dem Taschenrechner l"osen}
+	
+Ein lineares Gleichungssystem l"asst sich sehr viel schneller mit dem Taschgenrechner l"osen:\\
+
+$\Rightarrow$ $\left\{ \begin{array}{rcl}
+4x+3y+z&=&13\\
+2x-5y+3z& =& 1\\
+7x-y-2z&=&-1\\
+\end{array}\right.$\\
+\\
+Hierf"ur geht man beim Taschenrechner auf [matrix] und auf [edit]. Dann gibt man seine Matrix (hier als Beispiel) ein:\\
+\\
+$\Rightarrow$ $\left\vert \begin{array}{rccl}
+4&3&1&13\\
+2&-5&3& 1 \\
+7&-1&-2&-1\\
+\end{array}\right\vert$\\
+\\
+Dann geht man wieder in den rechnen-Modus und gibt ein:  [matrix], dann geht man auf [math], [rref]. dann geht man nochmal auf [matrix], [A] (die gerade bearbeitete Matrix):\\
+\\
+$\Rightarrow$ $\left\vert \begin{array}{rccl}
+1&0&0&1\\
+0&1&0&2 \\
+0&0&1&3\\
+\end{array}\right\vert$ \qquad $\Rightarrow \mathbb{L}=\{(1|2|3) \}$ \\ 
+
+Wenn Werte mit Kommazahlen drankommen, ist es nützlich, im Taschenrechner [Math] $+$ [1](Frac) einzugeben, um sich die Werte in Brüchen anzeigen zu lassen.\\
+
