--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -2,9 +2,9 @@
 \section{Kurze Wiederholung}
 \begin{Bws}
 Im Kreis mit Radius 1 gelte:\\
-$cos(\alpha)= x_{_M}$\\
-$sin(\alpha)= y_{_M}$\\
-$tan(\alpha)=\dfrac {sin(\alpha)} {cos(\alpha)}$
+$\cos(\alpha)= x_{_M}$\\
+$\sin(\alpha)= y_{_M}$\\
+$\tan(\alpha)=\dfrac {sin(\alpha)} {cos(\alpha)}$
 \end{Bws}\\
 
 \definecolor{qqwuqq}{rgb}{0,0.39,0}
@@ -52,10 +52,10 @@ TAAABELLLE
 adf
 \section{Addtions- und Versopplungssätze}
 \begin{Bws}
-$cos(a - b) = cos(a)cos(b) + sin(a) sin(b)$\\
-$sin(a - b) = sin(a)cos(b) - cos(a)sin(b)$\\
-$cos(a + b) = cos(a)cos(b) - sin(a)sin(b)$\\
-$sin(a + b) = sin(a)cos(b) + cos(a)sin(b)$
+$\cos(a - b) = \cos(a)\cos(b) + \sin(a) \sin(b)$\\
+$\sin(a - b) = \sin(a)\cos(b) - \cos(a)\sin(b)$\\
+$\cos(a + b) = \cos(a)\cos(b) - \sin(a)\sin(b)$\\
+$\sin(a + b) = \sin(a)\cos(b) + \cos(a)\sin(b)$
 \end{Bws}
 
 \section{Allgemeine Sinus- und Kosinussätze}
