--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -1,2 +1,4 @@
 \chapter{Arithmetik}
 Nur ein weiterer kleiner Test\\
+\section{Die Macht der Arithmetik}
+Sie ist unglaublich star... Stärker als alle andere... Die Eine, um sie alle zu knechten... Sie ist mein $Scccchhhattzz$
