--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -91,7 +91,7 @@ $c²=a²+b²-2abcos(\gamma)$
 \end{tikzpicture}\\
 Man bemerkt, dass sich die bekannten Relationen ergeben, wenn einer der Winkel den Wert $\dfrac{\pi}{2}$ annimmt.
 \section{Sinusfunktionen}
-Zur Vollständigen Funktionsdiskussion einer Sinus-Funktion sind einige Besonderheiten zu beachten:\\
+Zur Vollständigen Funktionsdiskussion einer Sinus-Funktion sind einige Besonderheiten zu beachten:
 \begin{enumerate}
 \item Amplitude und Periodizität\\
 Formel
