Anfang zu Vektoren. Experimentell

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -1,6 +1,15 @@
 \chapter{Vektorielle Geometrie}
-dsdfs\\
 
 
-\section{g}
-f\\
+\section{Vektoren}
+\begin{Bws}
+Ein Vektor ist Element eines Vektorraums.
+\end{Bws}\\
+Vektorräume, wir erinnern uns zurück. Verknüpfungen, inverse Elemente und die dazugehörenden Gesetze, konsequente Definitionen und mathematische Korrektheit, die guten alten Zeiten...\\
+Tatsächlich kann ein Vektor in den meisten Fällen als Verschiebung bezeichnet werden, \textbf{nicht aber als Pfeil oder Strich!}\\
+\subsection{Besondere Vektoren}
+\subsubsection{Der Ortsvektor}
+Der Vektor von $O$ auf den Punkt $P$, geschrieben als $\vec{OP}$ oder $\vec{o}$.\\
+Hat $P$ die Koordinaten $(P_1|P_2|P_3)$, so besitzt $\vec{o}$ die Darstellung $\left(\begin{array}{c} P_1 \\ P_1 \\ P_3\end{array}\right)$.
+\subsubsection{Der Nullvektor}
+Der Vektor mit Wert $\left(\begin{array}{c} 0 \\ 0 \\ 0\end{array}\right)$, er hat keine und alle Richtungen zugleich.
