Mit neuem Style (als Test)

--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -94,9 +94,14 @@ Man bemerkt, dass sich die bekannten Relationen ergeben, wenn einer der Winkel d
 Zur Vollständigen Funktionsdiskussion einer Sinus-Funktion sind einige Besonderheiten zu beachten:
 \begin{enumerate}
 \item Amplitude und Periodizität\\
-Formel
-\item Symmetrieeigenschaften
+Eine Funktion der Form $f(x)=a\cdot\sin(b(x-c))+d$ hat:\begin{enumerate}
+\item die Periode $P = \dfrac{2\pi}{|b|}$
+\item die Amplitude $A = |a|$
+\item die Verschiebung entlang der $x$-Achse um $d$ und entlang der $y$-Achse um $c$
+\end{enumerate}
+\item Symmetrieeigenschaften\\
+Hier sollte zumindest bekannt sein, dass $f(x)=\sin(x)$ punktsymmetrisch zum Origo ist, und dass $f(x)=\cos(x)$ Achsensymmetrisch zur $y$-Achse ist.
 \item Die Null-, Extrem- und Wendestellen sind in Form einer Menge anzugeben. (Es sei denn, die Aufgabenvorschrift fordert explizit auf eine Begrenzung auf ein angegebenes Intervall auf)\\
-Bsp: Die Nullstellen der Funktion $f(x)=\sin(x)$ lassen sich dartstellen als: $x \in \{k\pi|k \in \N^+_- \}$
+Bsp: Die Nullstellen der Funktion $f(x)=\sin(x)$ lassen sich dartstellen als: $x \in \{k\pi|k \in \Z\}$
 \\ In umgebung einfärben + Z?
 \end{enumerate}
