Trig.+Vektoren erweitert (noch nicht fertig)

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -10,6 +10,21 @@ Tatsächlich kann ein Vektor in den meisten Fällen als Verschiebung bezeichnet 
 \subsection{Besondere Vektoren}
 \subsubsection{Der Ortsvektor}
 Der Vektor von $O$ auf den Punkt $P$, geschrieben als $\vec{OP}$ oder $\vec{o}$.\\
-Hat $P$ die Koordinaten $(P_1|P_2|P_3)$, so besitzt $\vec{o}$ die Darstellung $\left(\begin{array}{c} P_1 \\ P_1 \\ P_3\end{array}\right)$.
+Hat $P$ die Koordinaten $(P_1|P_2|...|P_n)$, so besitzt $\vec{o}$ die Darstellung $\left(\begin{array}{c} P_1 \\ P_2 \\ ...\\P_n\end{array}\right)$.
 \subsubsection{Der Nullvektor}
-Der Vektor mit Wert $\left(\begin{array}{c} 0 \\ 0 \\ 0\end{array}\right)$, er hat keine und alle Richtungen zugleich.
+Der Vektor mit Wert $\left(\begin{array}{c} 0 \\ 0 \\ ...\\0\end{array}\right)$, er hat keine und alle Richtungen zugleich.
+\begin{Bemerkung}
+Er ist somit das neutrale Element der Vektoraddition.
+\end{Bemerkung}
+\subsubsection{Der Verbindungsvektor}
+Der Vektor $\vec{AB}$ ist der Vektor, der den Punkt $A$ auf den Punnḱt $B$ abbildet. Er ist definiert als: $\vec{AB}=\vec{OB}-\vec{OA}$.
+\\Rechnung? b1-a1 b2-12 ...?
+\subsubsection{Der Gegenvektor}
+Der Gegenvektor zu $\vec{AB}$ ist $\vec{BA}$, definiert als  $-\vec{AB}$.
+\begin{Bemerkung}
+Er ist somit das inverse Element der Vektoraddition.
+\end{Bemerkung}
+\section{Winkel zwischen Vektoren}
+\section{Geraden}
+\section{Ebenen}
+\section{Skalarprodukte??}
