--- a/main.tex
+++ b/main.tex
@@ -16,8 +16,8 @@
 \pagestyle{fancy}
 \fancyhead{}
 \fancyfoot{}
-\fancyhead[L]{Skript Mathematik}
-\fancyhead[R]{SMP}
+\fancyhead[L]{\nouppercase{\leftmark}}
+\fancyhead[R]{Skript SMP}
 \fancyfoot[C]{\thepage}
 
 \parindent 0ex
@@ -50,6 +50,8 @@
 \include{kap8/kap8}
 \include{kap9/kap9}
 \include{kap10/kap10}
+\include{kap11/kap11}
+
 %und so weiter
 
 \end{document}
