--- a/style.tex
+++ b/style.tex
@@ -1,8 +1,10 @@
-\newenvironment{Bemerkung}{%
-\begin{center}
-}{%
-\end{center}
-}
+\newenvironment{Bemerkung}{\par\vspace{10pt}\small % Vertical white space above the remark and smaller font size
+\begin{list}{}{
+\leftmargin=35pt % Indentation on the left
+\rightmargin=25pt}\item\ignorespaces % Indentation on the right
+\makebox[-2.5pt]{\begin{tikzpicture}[overlay]
+\node[draw=ocre!60,line width=1pt,circle,fill=ocre!25,font=\sffamily\bfseries,inner sep=2pt,outer sep=0pt] at (-15pt,0pt){\textcolor{ocre}{ \textbackslash \textbackslash}};\end{tikzpicture}} % Orange R in a circle
+\advance\baselineskip -1pt}{\end{list}\vskip5pt} % Tighter line spacing and white space after remark
 \newenvironment{Bws}
 {\par\noindent\normalfont\par\nopagebreak%
   \begin{mdframed}[
@@ -14,7 +16,7 @@
      skipabove=.5\baselineskip
    ]}
   {\end{mdframed}}
-
+%Kapitel-Titelblatt
 \makeatletter
 \def\thickhrulefill{\leavevmode \leaders \hrule height 1.2ex \hfill \kern \z@}
 \def\@makechapterhead#1{
@@ -34,3 +36,8 @@
         \hrule
         \vskip 50\p@
   }}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Es fehlen:
+%Definitionen (rot?)
+%Kommentare,Bemerkungen (bleich?)
+%Fancy titles?
