--- a/title.tex
+++ b/title.tex
@@ -2,11 +2,12 @@
 	\begin{center}
 	\line(1,0){300}  \\
 	[0,5cm]
-	\Huge{\bfseries SchülerSkript SMP} \\
+	\Huge{\bfseries Schülerskript SMP} \\
 	[3cm]
 	\textsc{ \bfseries MATHEMATIK}  \\
 	[15cm]
 	\small{\today} \\
-	[5cm]
+	[2cm]
+	\tiny{Clara, Bruno, Pascal, Rémy, ..., 1$^{ere}$ SMP}
 	\end{center}
 \end{titlepage}
