--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -70,10 +70,10 @@ In einem beliebigen Dreieck gelten abgewandelte Formen der aus der 8. Klasse bek
 \begin{Bws}
 $\dfrac {a} {sin(\alpha)}=\dfrac {b} {sin(\beta)}=\dfrac {c} {sin(\gamma)}$\\\\
 $c²=a²+b²-2abcos(\gamma)$
-\end{Bws}\\
+\end{Bws}
 \definecolor{qqwuqq}{rgb}{0,0.39,0}
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=0.510204081632653cm,y=0.64516129032258cm]
-\clip(-1.3,-5.52) rectangle (10.46,3.78);
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=0.53cm,y=0.64cm]
+\clip(-0.4,-4.3) rectangle (9,3);
 \draw [shift={(4.22,1.92)},color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (-134.14:1.5) arc (-134.14:-47.61:1.5) -- cycle;
 \draw [shift={(-0.38,-2.82)},color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (1.04:1.5) arc (1.04:45.86:1.5) -- cycle;
 \draw [shift={(8.4,-2.66)},color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (132.39:1.5) arc (132.39:181.04:1.5) -- cycle;
@@ -81,7 +81,7 @@ $c²=a²+b²-2abcos(\gamma)$
 \draw (4.22,1.92)-- (-0.38,-2.82);
 \draw (8.4,-2.66)-- (-0.38,-2.82);
 \begin{scriptsize}
-\draw[color=black] (6.12,-0.44) node {$a$};
+\draw[color=black] (6.7,-0.44) node {$a$};
 \draw[color=black] (1.76,-0.08) node {$b$};
 \draw[color=black] (4.06,-2.28) node {$c$};
 \draw[color=qqwuqq] (4.4,1.05) node {$\gamma$};
@@ -103,5 +103,48 @@ Eine Funktion der Form $f(x)=a\cdot\sin(b(x-c))+d$ hat:\begin{enumerate}
 Hier sollte zumindest bekannt sein, dass $f(x)=\sin(x)$ punktsymmetrisch zum Origo ist, und dass $f(x)=\cos(x)$ Achsensymmetrisch zur $y$-Achse ist.
 \item Die Null-, Extrem- und Wendestellen sind in Form einer Menge anzugeben. (Es sei denn, die Aufgabenvorschrift fordert explizit auf eine Begrenzung auf ein angegebenes Intervall auf)\\
 Bsp: Die Nullstellen der Funktion $f(x)=\sin(x)$ lassen sich dartstellen als: $x \in \{k\pi|k \in \Z\}$
-\\ In umgebung einfärben + Z?
+\\ In umgebung einfärben
+\item Bei der Teilung durch eine Sinusfunktion können Definitionslücken an dessen Nullstellen entstehen. Auch diese können in der bereits gezeigten Form angegeben werden.
 \end{enumerate}
+\section{Polarkoordinaten}
+In der Kursstufe beschränken wir uns auf die Benutzung von Polarkoordinaten für Punkte in der Ebene (2D).
+\begin{Bws}
+Polarkoordinaten sind eine Form der eindeutigen Punktangaben, doch anstatt wie kartesische Koordinaten 2 Entfernungen $x$ und $y$ zu verwenden, haben sie die Form $(r|\varphi)$. $r$ ist hierbei die Entfernung zum Origo und $\varphi$ ein orientierter Winkel (in $rad$).
+\end{Bws}
+\definecolor{zzzzzz}{rgb}{0.6,0.6,0.6}
+\definecolor{ffqqqq}{rgb}{1,0,0}
+\definecolor{qqzzqq}{rgb}{0,0.6,0}
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
+\draw[->,color=black] (-0.2,0) -- (2.64,0);
+\foreach \x in {,1,2}
+\draw[shift={(\x,0)},color=black] (0pt,-2pt);
+\draw[color=black] (2.47,0.04) node [anchor=south west] { x};
+\draw[->,color=black] (0,-0.29) -- (0,2.63);
+\foreach \y in {,1,2}
+\draw[shift={(0,\y)},color=black] (2pt,0pt) -- (-2pt,0pt);
+\draw[color=black] (0.05,2.43) node [anchor=west] { y};
+\clip(-0.2,-0.29) rectangle (2.64,2.63);
+\draw [shift={(0,0)},color=ffqqqq,fill=ffqqqq,fill opacity=0.1] (0,0) -- (0:0.41) arc (0:46.48:0.41) -- cycle;
+\draw [color=qqzzqq] (0,0)-- (2.05,2.16);
+\draw [color=zzzzzz] (0,2.16)-- (2.05,2.16);
+\draw [color=zzzzzz] (2.05,2.16)-- (2.05,0);
+\begin{scriptsize}
+\fill [color=black] (2.05,2.16) circle (1.5pt);
+\draw[color=black] (2.12,2.29) node {$P$};
+\draw[color=qqzzqq] (1.16,1.04) node {r};
+\draw[color=ffqqqq] (0.31,0.17) node {$\phi$};
+\draw[color=zzzzzz] (0.96,2.02) node {y};
+\draw[color=zzzzzz] (1.9,1.03) node {x};
+\end{scriptsize}
+\end{tikzpicture}\\Pfeil?
+\subsection{Umrechnung}
+\subsubsection{Kartesisch $\rightarrow$ Polar}
+\begin{itemize}
+\item  $r=\sqrt{x^2+y^2}$
+\item $\varphi = \tan(\dfrac{y}{x})$
+\end{itemize}
+\subsubsection{Polar $\rightarrow$ Kartesisch}
+\begin{itemize}
+\item $x = r\cdot\cos(\varphi)$
+\item  $y=r\cdot\sin(\varphi)$
+\end{itemize}
