--- a/style.tex
+++ b/style.tex
@@ -1,3 +1,4 @@
+%Bemerkung:
 \newenvironment{Bemerkung}{\par\vspace{10pt}\small % Vertical white space above the remark and smaller font size
 \begin{list}{}{
 \leftmargin=35pt % Indentation on the left
@@ -5,7 +6,10 @@
 \makebox[-2.5pt]{\begin{tikzpicture}[overlay]
 \node[draw=ocre!60,line width=1pt,circle,fill=ocre!25,font=\sffamily\bfseries,inner sep=2pt,outer sep=0pt] at (-15pt,0pt){\textcolor{ocre}{ \textbackslash \textbackslash}};\end{tikzpicture}} % Orange R in a circle
 \advance\baselineskip -1pt}{\end{list}\vskip5pt} % Tighter line spacing and white space after remark
-\newenvironment{Bws}
+
+
+%Beweise
+\newenvironment{Beweis}
 {\par\noindent\normalfont\par\nopagebreak%
   \begin{mdframed}[
      linewidth=3pt,
@@ -16,6 +20,8 @@
      skipabove=.5\baselineskip
    ]}
   {\end{mdframed}}
+  
+  
 %Kapitel-Titelblatt
 \makeatletter
 \def\thickhrulefill{\leavevmode \leaders \hrule height 1.2ex \hfill \kern \z@}
@@ -36,6 +42,8 @@
         \hrule
         \vskip 50\p@
   }}
+  
+  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Es fehlen:
 %Definitionen (rot?)
